Set proper production envHide debug queries if not debugging

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
     -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin,latin-ext" type="text/css" />
-  <title>Fuzzy Search</title>
+  <title>ISI Datamart</title>
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
